--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0-development",
   "description": "GitHub action that schedules a CI run on Firmware CI Runner for AWS",
   "scripts": {
-    "build": "npx ncc build schedule.ts -o build"
+    "build": "npx ncc build schedule.ts -o build",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -45,16 +48,11 @@
     "@types/uuid": "8.3.0",
     "@vercel/ncc": "0.27.0",
     "eslint": "7.19.0",
-    "husky": "5.0.9",
+    "husky": "^5.0.9",
     "lint-staged": "10.5.4",
+    "pinst": "^2.1.4",
     "prettier": "2.2.1",
     "typescript": "4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged && npm run build && git add -A build"
-    }
   },
   "lint-staged": {
     "*.{md,json,yaml,yml}": [
