--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@types/uuid": "8.3.0",
     "@vercel/ncc": "0.27.0",
     "eslint": "7.19.0",
-    "husky": "^5.0.9",
+    "husky": "5.0.9",
     "lint-staged": "10.5.4",
-    "pinst": "^2.1.4",
+    "pinst": "2.1.4",
     "prettier": "2.2.1",
     "typescript": "4.1.3"
   },
