--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nordicsemiconductor/asset-tracker-cloud-aws": "26.0.6",
     "@nordicsemiconductor/cloudformation-helpers": "6.0.16",
     "@nordicsemiconductor/firmware-ci-runner-aws": "5.1.20",
+    "chalk": "4.1.0",
     "node-fetch": "2.6.1",
     "uuid": "8.3.2"
   },
