--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     ]
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
+    "node": "16",
+    "node": "7"
   },
   "release": {
     "branches": [
