--- a/package.json
+++ b/package.json
@@ -31,16 +31,9 @@
     "chalk": "4.1.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "13.2.1",
-    "@commitlint/config-angular": "13.2.0",
-    "@nordicsemiconductor/asset-tracker-cloud-code-style": "9.2.0",
+    "@nordicsemiconductor/asset-tracker-cloud-code-style": "9.2.1",
     "@types/node": "15.12.1",
-    "@vercel/ncc": "0.31.1",
-    "husky": "7.0.4",
-    "lint-staged": "11.2.4",
-    "pinst": "2.1.6",
-    "prettier": "2.4.1",
-    "typescript": "4.4.4"
+    "@vercel/ncc": "0.31.1"
   },
   "lint-staged": {
     "*.{md,json,yaml,yml}": [
