fix: use new board identifiers
The identifiers were renamed in nRF Connect SDK
version 1.6.1.
See https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/nrf/ug_nrf9160.html\#build-targets

--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ inputs:
     default: logs
   target:
     description: "Target board to use"
-    default: "nrf9160dk_nrf9160ns"
+    default: "nrf9160dk_nrf9160_ns"
     required: false
 
 runs:
